k8s/bento/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: bento
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: bentopdf
  template:
    metadata:
      labels:
        app: bentopdf
    spec:
      containers:
        - name: bentopdf
          image: bentopdf/bentopdf:v1.15.3
          ports:
            - containerPort: 8080
