k8s/bento/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf-service
  namespace: bentopdf
spec:
  selector:
    app: bentopdf
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
